force-app/main/default/objects/Product2/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREDIT</fullName>
            </value>
            <value>
                <fullName>DIRECT EXPENSE</fullName>
            </value>
            <value>
                <fullName>HOURLY SERVICE</fullName>
            </value>
            <value>
                <fullName>FEES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>