force-app/main/default/objects/Product2/fields/Default_Classification__c.field-meta.xml
<CustomField>
    <fullName>Default_Classification__c</fullName>
    <label>Default Classification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>