force-app/main/default/objects/Product2/fields/Monthly_Free_Hours__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Free_Hours__c</fullName>
    <label>Monthly Free Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>