force-app/main/default/objects/Product2/fields/Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Billable</label>
    <type>Checkbox</type>
</CustomField>