force-app/main/default/objects/Product2/fields/Original_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_System_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Original System ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>