force-app/main/default/objects/Product2/fields/QB_Billing_Category__c.field-meta.xml
<CustomField>
    <fullName>QB_Billing_Category__c</fullName>
    <label>QB Billing Category</label>
    <length>60</length>
    <type>Text</type>
</CustomField>