force-app/main/default/objects/Product2/fields/Quickbooks_Class__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Class__c</fullName>
    <label>Quickbooks Class</label>
    <length>60</length>
    <type>Text</type>
</CustomField>