force-app/main/default/objects/Product2/fields/QuickbooksInternalID__c.field-meta.xml
<CustomField>
    <fullName>QuickbooksInternalID__c</fullName>
    <externalId>true</externalId>
    <label>Quickbooks Internal ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>