force-app/main/default/objects/Product2/fields/QuickbooksUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>QuickbooksUnitPrice__c</fullName>
    <label>QuickbooksUnitPrice</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>