force-app/main/default/objects/Product2/fields/Refund_Alias_ID__c.field-meta.xml
<CustomField>
    <fullName>Refund_Alias_ID__c</fullName>
    <label>Refund Alias ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>