force-app/main/default/objects/Product2/fields/X18_Character_SF_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Character_SF_Product_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Character SF Product ID</label>
    <type>Text</type>
</CustomField>