force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Charge_Type__c</columns>
    <columns>Default_Classification__c</columns>
    <columns>Time_Entry_Category__c</columns>
    <columns>QuickbooksInternalID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>