force-app/main/default/objects/Product2/listViews/Direct_Expense_Products.listView-meta.xml
<ListView>
    <fullName>Direct_Expense_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>QuickbooksInternalID__c</columns>
    <columns>Charge_Type__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>QB_Billing_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Charge_Type__c</field>
        <operation>equals</operation>
        <value>DIRECT EXPENSE</value>
    </filters>
    <label>Direct Expense Products</label>
</ListView>